--- a/klet/searchtool/data/datacleaningv1.ipynb
+++ b/klet/searchtool/data/datacleaningv1.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "62e87d0f",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
+   "id": "c7f1e549",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lets use what has already been done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "31a2eb43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before duplicates:- 2446\n",
+      "No. of duplicates:- 870\n",
+      "after getting rid of duplicates:- 1681\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1 = pd.read_csv('dataClean.csv')\n",
+    "print(\"before duplicates:-\",df1.shape[0])\n",
+    "df3 = df1[df1.duplicated([\"sourceTitle\",\"publisher\",\"yearCreated\"],keep=False)]\n",
+    "print(\"No. of duplicates:-\",df3.shape[0])\n",
+    "df3.to_csv('ptDuplicates.csv')\n",
+    "df4 = df1.drop_duplicates(subset=[\"sourceTitle\",\"publisher\",\"yearCreated\"], keep='last')\n",
+    "print(\"after getting rid of duplicates:-\",df4.shape[0])\n",
+    "df4.to_csv('dataWithOutDups.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "8de1d9c2",
    "metadata": {},
    "outputs": [],
@@ -77,252 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "f198f86d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GENRE</th>\n",
-       "      <th>authorKorean</th>\n",
-       "      <th>authorEnglish</th>\n",
-       "      <th>workTitle</th>\n",
-       "      <th>translator</th>\n",
-       "      <th>sourceTitle</th>\n",
-       "      <th>publisher</th>\n",
-       "      <th>yearCreated</th>\n",
-       "      <th>authorEnglish2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Fiction</td>\n",
-       "      <td>강경애</td>\n",
-       "      <td>Kang Kyung-ae</td>\n",
-       "      <td></td>\n",
-       "      <td>Sora Kim-Russell</td>\n",
-       "      <td>Broken Strings</td>\n",
-       "      <td>Literature Translation Institute of Korea*</td>\n",
-       "      <td>2013.00</td>\n",
-       "      <td>Kang Kyung ae/Kang Kyung-ae</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Fiction</td>\n",
-       "      <td>강경애</td>\n",
-       "      <td>Kang Kyŏng-ae</td>\n",
-       "      <td></td>\n",
-       "      <td>Samuel Perry</td>\n",
-       "      <td>From Wonso Pond</td>\n",
-       "      <td>The Feminist Press</td>\n",
-       "      <td>2009.00</td>\n",
-       "      <td>Kang Kyong ae/Kang Kyong-ae/Kang Kyŏng-ae</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Fiction</td>\n",
-       "      <td>강경애</td>\n",
-       "      <td>Kang Kyung-ae</td>\n",
-       "      <td></td>\n",
-       "      <td>Sora Kim-Russell</td>\n",
-       "      <td>Mother And Child</td>\n",
-       "      <td>Literature Translation Institute of Korea*</td>\n",
-       "      <td>2014.00</td>\n",
-       "      <td>Kang Kyung ae/Kang Kyung-ae</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Fiction</td>\n",
-       "      <td>강경애</td>\n",
-       "      <td>Kang Kyeong-ae</td>\n",
-       "      <td></td>\n",
-       "      <td>Anton Hur</td>\n",
-       "      <td>The Underground Village</td>\n",
-       "      <td>Honford Star</td>\n",
-       "      <td>2018.00</td>\n",
-       "      <td>Kang Kyeong ae/Kang Kyeong-ae</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Fiction</td>\n",
-       "      <td>강경애</td>\n",
-       "      <td>Kang kyong-ae</td>\n",
-       "      <td></td>\n",
-       "      <td>Suh Ji-Moon</td>\n",
-       "      <td>The Underground Village : Volume 090</td>\n",
-       "      <td>Asia publishers</td>\n",
-       "      <td>2014.00</td>\n",
-       "      <td>Kang kyong ae/Kang kyong-ae</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2441</th>\n",
-       "      <td>Misc.</td>\n",
-       "      <td>이시우</td>\n",
-       "      <td>Lee Si-Woo</td>\n",
-       "      <td></td>\n",
-       "      <td>Myung-Hee Kim</td>\n",
-       "      <td>Life On The Edge Of The Dmz</td>\n",
-       "      <td>BRILL*</td>\n",
-       "      <td>2008.00</td>\n",
-       "      <td>Lee Si Woo/Lee Si-Woo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2442</th>\n",
-       "      <td>Misc.</td>\n",
-       "      <td>장인명</td>\n",
-       "      <td>Chang Inmyŏng</td>\n",
-       "      <td>The Journal Of Chang Inmyŏng</td>\n",
-       "      <td>Bruce Fulton, Ju-Chan Fulton</td>\n",
-       "      <td>Acta Koreana, V.22 No.1, P.177-205</td>\n",
-       "      <td>Academia Koreana</td>\n",
-       "      <td>2019.06</td>\n",
-       "      <td>Chang Inmyong/Chang Inmyŏng</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2443</th>\n",
-       "      <td>Misc.</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>Kevin O'Rourke</td>\n",
-       "      <td>Asian Literature:  Poetry, Short Stories &amp; Pla...</td>\n",
-       "      <td>International P.E.N. Asian Writers' Translatio...</td>\n",
-       "      <td>1975.00</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2444</th>\n",
-       "      <td>Misc.</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>Kevin O'Rourke</td>\n",
-       "      <td>Asian Literature:  Short Stories &amp; Plays</td>\n",
-       "      <td>International P.E.N. Asian Writers' Translatio...</td>\n",
-       "      <td>1973.00</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2445</th>\n",
-       "      <td>Misc.</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>Kevin O'Rourke</td>\n",
-       "      <td>Asian Literature:  Short Stories, Poetry, Essa...</td>\n",
-       "      <td>International P.E.N. Asian Writers' Translatio...</td>\n",
-       "      <td>1979.00</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2446 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        GENRE authorKorean   authorEnglish                     workTitle  \\\n",
-       "0     Fiction          강경애   Kang Kyung-ae                                 \n",
-       "1     Fiction          강경애  Kang Kyŏng-ae                                 \n",
-       "2     Fiction          강경애   Kang Kyung-ae                                 \n",
-       "3     Fiction          강경애  Kang Kyeong-ae                                 \n",
-       "4     Fiction          강경애   Kang kyong-ae                                 \n",
-       "...       ...          ...             ...                           ...   \n",
-       "2441    Misc.          이시우      Lee Si-Woo                                 \n",
-       "2442    Misc.          장인명   Chang Inmyŏng  The Journal Of Chang Inmyŏng   \n",
-       "2443    Misc.                                                              \n",
-       "2444    Misc.                                                              \n",
-       "2445    Misc.                                                              \n",
-       "\n",
-       "                        translator  \\\n",
-       "0                 Sora Kim-Russell   \n",
-       "1                     Samuel Perry   \n",
-       "2                 Sora Kim-Russell   \n",
-       "3                        Anton Hur   \n",
-       "4                      Suh Ji-Moon   \n",
-       "...                            ...   \n",
-       "2441                 Myung-Hee Kim   \n",
-       "2442  Bruce Fulton, Ju-Chan Fulton   \n",
-       "2443                Kevin O'Rourke   \n",
-       "2444                Kevin O'Rourke   \n",
-       "2445                Kevin O'Rourke   \n",
-       "\n",
-       "                                            sourceTitle  \\\n",
-       "0                                        Broken Strings   \n",
-       "1                                       From Wonso Pond   \n",
-       "2                                      Mother And Child   \n",
-       "3                               The Underground Village   \n",
-       "4                  The Underground Village : Volume 090   \n",
-       "...                                                 ...   \n",
-       "2441                        Life On The Edge Of The Dmz   \n",
-       "2442                 Acta Koreana, V.22 No.1, P.177-205   \n",
-       "2443  Asian Literature:  Poetry, Short Stories & Pla...   \n",
-       "2444         Asian Literature:  Short Stories & Plays 　   \n",
-       "2445  Asian Literature:  Short Stories, Poetry, Essa...   \n",
-       "\n",
-       "                                              publisher  yearCreated  \\\n",
-       "0            Literature Translation Institute of Korea*      2013.00   \n",
-       "1                                    The Feminist Press      2009.00   \n",
-       "2            Literature Translation Institute of Korea*      2014.00   \n",
-       "3                                          Honford Star      2018.00   \n",
-       "4                                       Asia publishers      2014.00   \n",
-       "...                                                 ...          ...   \n",
-       "2441                                             BRILL*      2008.00   \n",
-       "2442                                   Academia Koreana      2019.06   \n",
-       "2443  International P.E.N. Asian Writers' Translatio...      1975.00   \n",
-       "2444  International P.E.N. Asian Writers' Translatio...      1973.00   \n",
-       "2445  International P.E.N. Asian Writers' Translatio...      1979.00   \n",
-       "\n",
-       "                                  authorEnglish2  \n",
-       "0                    Kang Kyung ae/Kang Kyung-ae  \n",
-       "1     Kang Kyong ae/Kang Kyong-ae/Kang Kyŏng-ae  \n",
-       "2                    Kang Kyung ae/Kang Kyung-ae  \n",
-       "3                  Kang Kyeong ae/Kang Kyeong-ae  \n",
-       "4                    Kang kyong ae/Kang kyong-ae  \n",
-       "...                                          ...  \n",
-       "2441                       Lee Si Woo/Lee Si-Woo  \n",
-       "2442                 Chang Inmyong/Chang Inmyŏng  \n",
-       "2443                                              \n",
-       "2444                                              \n",
-       "2445                                              \n",
-       "\n",
-       "[2446 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf2\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df2' is not defined"
+     ]
     }
    ],
    "source": [
